# 3DtestGPT

./: .gitignore  Makefile  README.md  compose.gpu.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/mobile/: .env.example  README.md  app.json  babel.config.js  jest.config.js  package.json  tsconfig.json
apps/mobile/__tests__/: auth.test.tsx
apps/mobile/app/: _layout.tsx  capture.tsx  feed.tsx  index.tsx  profile.tsx  upload.tsx
apps/mobile/app/post/: [id].tsx
apps/mobile/scripts/: run-tests.cjs
apps/server/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_initial.py
apps/server/app/: main.py
apps/server/app/api/routes/: auth.py  feed.py  jobs.py  posts.py  uploads.py  webhooks.py
apps/server/app/core/: config.py  database.py  deps.py  logging.py  security.py
apps/server/app/models/: __init__.py  common.py  entities.py
apps/server/app/schemas/: auth.py  feed.py  jobs.py  posts.py  uploads.py
apps/server/app/scripts/: seed.py
apps/server/app/services/: __init__.py  feed.py  queue.py  quota.py  storage.py
apps/server/tests/: conftest.py  test_auth.py  test_jobs.py  test_quota.py
apps/web/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(feed)/: page.tsx
apps/web/components/: FeedCard.tsx  ThreeViewer.tsx
apps/web/scripts/: offline-test.mjs
apps/web/tests/: feed-card.test.tsx
apps/worker/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
apps/worker/scripts/: download_sample.py
apps/worker/src/fashion3d_worker/: cli.py  config.py  jobs.py  logging.py  pipeline.py
apps/worker/tests/: test_pipeline.py
(+3 files in other folders)
