[tool.poetry]
name = "fashion3d-server"
version = "0.1.0"
description = "FastAPI backend for Fashion3D"
authors = ["Fashion3D Team <dev@fashion3d.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = { extras = ["standard"], version = "0.30.1" }
SQLAlchemy = "2.0.29"
psycopg = { version = "3.1.18", extras = ["binary"] }
passlib = "1.7.4"
python-jose = { version = "3.3.0", extras = ["cryptography"] }
email-validator = "2.1.0.post1"
structlog = "24.1.0"
redis = "5.0.4"
rq = "1.15.1"
minio = "7.2.4"
python-multipart = "0.0.9"
aiofiles = "24.1.0"
httpx = "0.27.0"
pydantic-settings = "2.2.1"
celery = "5.4.0"
stripe = "8.6.0"
slowapi = "0.1.9"
prometheus-client = "0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"
pytest-asyncio = "0.23.7"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
